kubernetes/apps/security/authelia/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app authelia
  namespace: &namespace security
spec:
  hostnames:
    - "auth.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          namespace: *namespace
          port: 8888
